--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "bulma": "^0.7.5",
     "core-js": "^2.6.5",
     "trae": "^1.4.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
